--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1875,13 +1875,9 @@ python-pynmea2:
       packages: [pynmea2]
 python-pyproj:
   arch: [python2-pyproj]
-  debian:
-    apt:
-      packages: [python-pyproj]
+  debian: [python-pyproj]
   fedora: [pyproj]
-  ubuntu:
-    apt:
-      packages: [python-pyproj]
+  ubuntu: [python-pyproj]
 python-pyquery:
   debian: [python-pyquery]
   fedora: [python-pyquery]
@@ -2032,13 +2028,9 @@ python-qt-bindings-qwt5:
     wily: [python-qwt5-qt4]
     xenial: [python-qwt5-qt4]
 python-qt4-gl:
-  debian:
-    apt:
-      packages: [python-qt4-gl]
+  debian: [python-qt4-gl]
   fedora: [PyQt4]
-  ubuntu:
-    apt:
-      packages: [python-qt4-gl]
+  ubuntu: [python-qt4-gl]
 python-qt5-bindings:
   arch: [python2-pyqt5]
   debian:
