--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1138,11 +1138,15 @@ repositories:
       version: kinetic-devel
     status: maintained
   euslisp:
+    doc:
+      type: git
+      url: https://github.com/tork-a/euslisp-release.git
+      version: release/kinetic/euslisp
     release:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/tork-a/euslisp-release.git
-      version: 9.22.0-0
+      version: 9.23.0-0
     status: developed
   executive_smach:
     release:
