use lunar-devel branch for ros_tutorials

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -522,7 +522,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/ros_tutorials.git
-      version: kinetic-devel
+      version: lunar-devel
     release:
       packages:
       - ros_tutorials
@@ -537,7 +537,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/ros_tutorials.git
-      version: kinetic-devel
+      version: lunar-devel
     status: maintained
   rosbag_migration_rule:
     release:
