--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -716,6 +716,11 @@ repositories:
       type: git
       url: https://github.com/AndreaCensi/csm.git
       version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/tork-a/csm-release.git
+      version: 1.0.2-1
     source:
       type: git
       url: https://github.com/AndreaCensi/csm.git
