--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -876,6 +876,9 @@ gnuplot:
     portage:
       packages: [sci-visualization/gnuplot]
   ubuntu: [gnuplot]
+golang-go:
+  debian: [golang-go]
+  ubuntu: [golang-go]
 google-mock:
   arch: [gmock]
   debian: [google-mock]
@@ -1623,6 +1626,7 @@ libgmp:
   fedora: [gmp-devel]
   ubuntu: [libgmp-dev]
 libgoogle-glog-dev:
+  debian: [libgoogle-glog-dev]
   fedora: [glog-devel]
   gentoo:
     portage:
