rtmros_nextage: 0.7.15-0 in 'indigo/distribution.yaml' [bloom] (#14151)

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11973,6 +11973,7 @@ repositories:
       version: indigo-devel
     release:
       packages:
+      - nextage_calibration
       - nextage_description
       - nextage_gazebo
       - nextage_ik_plugin
@@ -11982,7 +11983,7 @@ repositories:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/tork-a/rtmros_nextage-release.git
-      version: 0.7.14-0
+      version: 0.7.15-0
     source:
       test_pull_requests: true
       type: git
