--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14199,7 +14199,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/urdf_parser_py.git
-      version: 0.3.1
+      version: indigo-devel
     release:
       tags:
         release: release/indigo/{package}/{version}
