add debian and fedora rules
Fedora: https://admin.fedoraproject.org/pkgdb/package/rpms/python-junit_xml/
stretch: https://packages.debian.org/stretch/python-junit.xml
jessie: https://packages.debian.org/jessie/python-junitxml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1022,6 +1022,10 @@ python-jsonschema-pip:
     pip:
       packages: [jsonschema]
 python-junitxml:
+  debian:
+    jessie: [python-junitxml]
+    stretch: [python-junit.xml]
+  fedora: [python-junit_xml]
   ubuntu: [python-junitxml]
 python-kdtree:
   fedora: [libkdtree++-python]
