--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -380,6 +380,13 @@ repositories:
       url: https://github.com/ros/nodelet_core.git
       version: indigo-devel
     status: maintained
+  opencv3:
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/opencv3-release.git
+      version: 3.2.0-3
+    status: maintained
   pluginlib:
     doc:
       type: git
