--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -698,5 +698,24 @@ repositories:
       url: https://github.com/ros/urdf_parser_py.git
       version: indigo-devel
     status: maintained
+  vision_opencv:
+    doc:
+      type: git
+      url: https://github.com/ros-perception/vision_opencv.git
+      version: kinetic
+    release:
+      packages:
+      - cv_bridge
+      - image_geometry
+      - vision_opencv
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/vision_opencv-release.git
+      version: 1.12.4-0
+    source:
+      type: git
+      url: https://github.com/ros-perception/vision_opencv.git
+      version: kinetic
+    status: maintained
 type: distribution
 version: 2
