filters: 1.7.4-0 in 'lunar/distribution.yaml' [bloom] (#14167)

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -207,6 +207,22 @@ repositories:
       url: https://github.com/ros/eigen_stl_containers.git
       version: master
     status: maintained
+  filters:
+    doc:
+      type: git
+      url: https://github.com/ros/filters.git
+      version: hydro-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/filters-release.git
+      version: 1.7.4-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros/filters.git
+      version: hydro-devel
+    status: maintained
   gencpp:
     doc:
       type: git
