jsk_roseus: 1.6.1-0 in 'jade/distribution.yaml' [bloom]

--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -2298,10 +2298,11 @@ repositories:
       - roseus
       - roseus_mongo
       - roseus_smach
+      - roseus_tutorials
       tags:
         release: release/jade/{package}/{version}
       url: https://github.com/tork-a/jsk_roseus-release.git
-      version: 1.6.0-0
+      version: 1.6.1-0
     status: developed
   jsk_visualization:
     release:
