--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2323,10 +2323,11 @@ repositories:
       - jsk_roseus
       - roseus
       - roseus_smach
+      - roseus_tutorials
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/tork-a/jsk_roseus-release.git
-      version: 1.6.0-0
+      version: 1.6.1-0
     status: developed
   jsk_visualization:
     doc:
