--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -2968,11 +2968,15 @@ repositories:
       version: indigo-devel
     status: developed
   filters:
+    doc:
+      type: git
+      url: https://github.com/ros/filters.git
+      version: hydro-devel
     release:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-gbp/filters-release.git
-      version: 1.7.4-0
+      version: 1.7.5-0
     source:
       type: git
       url: https://github.com/ros/filters.git
