--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -176,6 +176,16 @@ repositories:
       url: https://github.com/ros/common_tutorials.git
       version: indigo-devel
     status: maintained
+  control_msgs:
+    doc:
+      type: git
+      url: https://github.com/ros-controls/control_msgs.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ros-controls/control_msgs.git
+      version: kinetic-devel
+    status: maintained
   dynamic_reconfigure:
     doc:
       type: git
