Don't test commits for basler_tof + sick_ldmrs_laser
* sick_ldmrs_laser depends on libsick_ldmrs, which is only available as
  source package
* basler_tof depends on external binary library

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -686,7 +686,7 @@ repositories:
       url: https://github.com/uos/basler_tof.git
       version: indigo
     source:
-      test_pull_requests: true
+      test_commits: false
       type: git
       url: https://github.com/uos/basler_tof.git
       version: indigo
@@ -12562,6 +12562,7 @@ repositories:
       url: https://github.com/SICKAG/sick_ldmrs_laser.git
       version: indigo
     source:
+      test_commits: false
       type: git
       url: https://github.com/SICKAG/sick_ldmrs_laser.git
       version: indigo
