--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -268,7 +268,7 @@ repositories:
       url: https://github.com/uos/basler_tof.git
       version: jade
     source:
-      test_pull_requests: true
+      test_commits: false
       type: git
       url: https://github.com/uos/basler_tof.git
       version: jade
@@ -6288,6 +6288,7 @@ repositories:
       url: https://github.com/SICKAG/sick_ldmrs_laser.git
       version: jade
     source:
+      test_commits: false
       type: git
       url: https://github.com/SICKAG/sick_ldmrs_laser.git
       version: jade
