--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -305,7 +305,7 @@ repositories:
       url: https://github.com/uos/basler_tof.git
       version: kinetic
     source:
-      test_pull_requests: true
+      test_commits: false
       type: git
       url: https://github.com/uos/basler_tof.git
       version: kinetic
@@ -6152,6 +6152,7 @@ repositories:
       url: https://github.com/SICKAG/sick_ldmrs_laser.git
       version: jade
     source:
+      test_commits: false
       type: git
       url: https://github.com/SICKAG/sick_ldmrs_laser.git
       version: jade
