--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -181,6 +181,11 @@ repositories:
       type: git
       url: https://github.com/ros-controls/control_msgs.git
       version: kinetic-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/control_msgs-release.git
+      version: 1.4.0-1
     source:
       type: git
       url: https://github.com/ros-controls/control_msgs.git
