--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -196,6 +196,11 @@ repositories:
       type: git
       url: https://github.com/ros-controls/control_toolbox.git
       version: kinetic-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/control_toolbox-release.git
+      version: 1.15.0-0
     source:
       type: git
       url: https://github.com/ros-controls/control_toolbox.git
