--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -6888,11 +6888,19 @@ repositories:
       version: 1.0.404-0
     status: maintained
   urg_node:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/urg_node.git
+      version: indigo-devel
     release:
       tags:
         release: release/jade/{package}/{version}
       url: https://github.com/ros-gbp/urg_node-release.git
-      version: 0.1.9-0
+      version: 0.1.10-0
+    source:
+      type: git
+      url: https://github.com/ros-drivers/urg_node.git
+      version: indigo-devel
     status: maintained
   usb_cam:
     doc:
