--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10331,11 +10331,12 @@ repositories:
       - roch_bringup
       - roch_follower
       - roch_navigation
+      - roch_rapps
       - roch_teleop
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/SawYerRobotics-release/roch-release.git
-      version: 1.0.9-0
+      version: 1.0.11-0
     source:
       type: git
       url: https://github.com/SawYer-Robotics/roch.git
