roch_concert: 0.0.1-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -10342,6 +10342,21 @@ repositories:
       url: https://github.com/SawYer-Robotics/roch.git
       version: indigo
     status: developed
+  roch_concert:
+    doc:
+      type: git
+      url: https://github.com/SawYer-Robotics/roch_concert.git
+      version: indigo
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/SawYerRobotics-release/roch_concert-release.git
+      version: 0.0.1-0
+    source:
+      type: git
+      url: https://github.com/SawYer-Robotics/roch_concert.git
+      version: indigo
+    status: developed
   roch_robot:
     doc:
       type: git
