--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -1372,6 +1372,13 @@ repositories:
       url: https://github.com/ros/genpy.git
       version: indigo-devel
     status: maintained
+  genty:
+    release:
+      tags:
+        release: release/jade/{package}/{version}
+      url: https://github.com/asmodehn/genty-rosrelease.git
+      version: 1.3.0-1
+    status: maintained
   geographic_info:
     doc:
       type: git
