genty: 1.3.0-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -3366,6 +3366,13 @@ repositories:
       url: https://github.com/ros/genpy.git
       version: indigo-devel
     status: maintained
+  genty:
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/asmodehn/genty-rosrelease.git
+      version: 1.3.0-0
+    status: maintained
   geographic_info:
     doc:
       type: git
