lunar: prepare initial release of Orocos KDL

--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -487,6 +487,22 @@ repositories:
       url: https://github.com/ros-gbp/opencv3-release.git
       version: 3.2.0-6
     status: maintained
+  orocos_kinematics_dynamics:
+    doc:
+      type: git
+      url: https://github.com/orocos/orocos_kinematics_dynamics.git
+      version: master
+    release:
+      packages:
+      - orocos_kdl
+      - orocos_kinematics_dynamics
+      - python_orocos_kdl
+      url: https://github.com/smits/orocos-kdl-release.git
+    source:
+      type: git
+      url: https://github.com/orocos/orocos_kinematics_dynamics.git
+      version: master
+    status: maintained
   pluginlib:
     doc:
       type: git
