Added smartmontools to rosdep rules (#14307)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3726,6 +3726,11 @@ sixad:
 slime:
   fedora: [emacs-slime]
   ubuntu: [slime]
+smartmontools:
+  arch: [smartmontools]
+  debian: [smartmontools]
+  fedora: [smartmontools]
+  ubuntu: [smartmontools]
 snappy:
   arch: [snappy]
   fedora: [snappy]
