--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7073,6 +7073,22 @@ repositories:
       url: https://github.com/turtlebot/turtlebot.git
       version: kinetic
     status: maintained
+  turtlebot3_msgs:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/turtlebot3_msgs.git
+      version: kinetic-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/turtlebot3_msgs-release.git
+      version: 0.1.3-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ROBOTIS-GIT/turtlebot3_msgs.git
+      version: kinetic-devel
+    status: maintained
   turtlebot_apps:
     doc:
       type: git
