--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -1029,6 +1029,22 @@ repositories:
       url: https://github.com/orocos/rFSM.git
       version: master
     status: maintained
+  rgbd_launch:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/rgbd_launch.git
+      version: jade-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ros-gbp/rgbd_launch-release.git
+      version: 2.2.2-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ros-drivers/rgbd_launch.git
+      version: jade-devel
+    status: maintained
   robot_model:
     doc:
       type: git
