--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4252,6 +4252,13 @@ repositories:
       url: https://github.com/easymov/oros_tools-release.git
       version: 0.1.1-0
     status: developed
+  oros_tools_examples:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/easymov/oros_tools_examples-release.git
+      version: 0.1.2-0
+    status: developed
   osrf_gear:
     doc:
       type: git
